# llm-bench

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_bench/: __init__.py  benchmark.py  cli.py  config.py  export.py  ollama.py
tests/: test_config.py  test_export.py
